Let users to align dropdown menu. Fixes #14
Usage: {{loginButtons align="left"}}

--- a/accounts_ui.styl
+++ b/accounts_ui.styl
@@ -31,3 +31,15 @@
 #login-buttons-reset-password-modal, #login-buttons-enroll-account-modal
 	.modal-content
 		margin-top: 30%;
+
+.login-buttons-dropdown-align-left
+	&#login-buttons #login-dropdown-list .dropdown-menu
+		float: left;
+		left: 0;
+		right: auto;
+.login-buttons-dropdown-align-right
+	&#login-buttons #login-dropdown-list .dropdown-menu
+		float: right;
+		right: 0;
+		left: auto;
+
